--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../../assets/styles/mixins';
+
 .episode-card {
 	width: 100%;
 	box-sizing: border-box;
@@ -38,4 +40,8 @@ mat-card-subtitle {
 .new-episode-button {
 	width: 100%;
 	height: 36px;
+}
+
+div.spinner {
+	@include centered-spinner;
 }
