--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
@@ -9,7 +9,7 @@
 			<mat-select formControlName="consultorio">
 				<mat-option id="consultorio_{{consultorio.id}}"
 							*ngFor="let consultorio of consultorios$ | async"
-							[value]="consultorio.id"
+							[value]="consultorio"
 				>
 					{{consultorio.description}}
 				</mat-option>
