tg-2975 fix detalle administrativo - error al mostrar el horario de ingreso e intervencion policial
(cherry picked from commit c560c802c6913ea2b9bca77a67ae1ac14c73b0a5)

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -3,7 +3,7 @@
 	<section id="basic-triage" fxLayout="column" fxLayoutGap="15px">
 		<div id="header" fxLayout="row" fxLayoutAlign="space-between center">
 			<h2 style="margin: 0">{{ 'guardia.episode.triage.ultimo.TITLE' | translate }}</h2>
-			<span>{{ triage.creationDate | date: 'dd/MM/yy - HH:mm' }} hs</span>
+			<span>{{ triage.creationDate | date: 'dd/MM/yyyy  - HH:mm' }} hs</span>
 		</div>
 
 		<div id="basic-data" fxLayout="row" fxLayoutGap="50px">
