--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
@@ -1,11 +1,11 @@
 <div mat-dialog-title>
-	{{ 'guardia.home.episodes.episode.select_consultorio.ATENDER' | translate }}
+	{{ data.title | translate }}
 </div>
-
+<span class="mat-typography">{{'guardia.select_consultorio.SUBTITLE' | translate}}</span>
 <form [formGroup]="form" (ngSubmit)="submit()">
 	<div mat-dialog-content>
 		<mat-form-field fxFlex="100%" appearance="outline">
-			<mat-label [translate]="'guardia.home.episodes.episode.select_consultorio.CONSULTORIO'"></mat-label>
+			<mat-label [translate]="'guardia.select_consultorio.CONSULTORIO'"></mat-label>
 			<mat-select formControlName="consultorio">
 				<mat-option id="consultorio_{{consultorio.id}}"
 							*ngFor="let consultorio of consultorios$ | async"
