--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -41,7 +41,7 @@
 
 				<div id="llanto" class="info" fxLayout="column" fxLayoutGap="5px" fxLayoutAlign="space-between">
 					<span>{{ 'guardia.episode.triage.ultimo.LLANTO_SIN_CONSUELO' | translate }}</span>
-					<span *ngIf="(triage.appearance?.cryingExcessive === undefined) else crying_present">
+					<span *ngIf="(triage.appearance?.cryingExcessive === null || triage.appearance?.cryingExcessive === undefined); else crying_present">
 					{{ 'guardia.NO_INFO' | translate }}
 				</span>
 					<ng-template #crying_present>
@@ -69,7 +69,7 @@
 				<div id="respiracion_estridor" class="info" fxLayout="column" fxLayoutGap="5px"
 					 fxLayoutAlign="space-between">
 					<span>{{ 'guardia.episode.triage.ultimo.RESPIRACION_ESTRIDOR' | translate }}</span>
-					<span *ngIf="(triage.breathing?.stridor === undefined) else stridorPresent">
+					<span *ngIf="(triage.breathing?.stridor === null || triage.breathing?.stridor === undefined); else stridorPresent">
 					{{ 'guardia.NO_INFO' | translate }}
 				</span>
 					<ng-template #stridorPresent>
