tg-3017 ajustar FE para permitir mapeo y acceso desde el nuevo campo createdBy de Triage

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -14,8 +14,8 @@
 
 			<div class="info" fxLayout="column" fxLayoutGap="6px" fxLayoutAlign="space-between">
 				<span>{{ 'guardia.episode.triage.ultimo.REALIZADO_POR' | translate }}</span>
-				<span *ngIf="triage.professional else noInfo" class="padding-to-align-chip">
-					{{ triage.professional.firstName }} {{ triage.professional.lastName }}
+				<span *ngIf="triage.createdBy else noInfo" class="padding-to-align-chip">
+					{{ triage.createdBy.firstName }} {{ triage.createdBy.lastName }}
 				</span>
 			</div>
 
