tg-2994 [FE] Agregar campo para mostrar ubicación del paciente en el detalle de episodio

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -71,6 +71,13 @@
 					</div>
 				</div>
 
+				<div fxLayout="column" fxLayoutGap="1px">
+					<span class="grid-title"> Ubicación </span>
+					<span *ngIf="doctorsOfficeDescription else noInfo" class="content-primary">
+					{{ doctorsOfficeDescription }}
+				</span>
+				</div>
+
 			</mat-card>
 
 			<mat-card id="last-triage-card" fxLayout="column" fxLayoutGap="20px">
