--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -72,7 +72,7 @@
 				</div>
 
 				<div fxLayout="column" fxLayoutGap="1px">
-					<span class="grid-title"> Ubicación </span>
+					<span class="grid-title" translate="guardia.episode.administrative.UBICACION"></span>
 					<span *ngIf="doctorsOfficeDescription else noInfo" class="content-primary">
 					{{ doctorsOfficeDescription }}
 				</span>
