tg-2970, tg-2985 [BE] [FE] Separacion de Dtos para crear y obtener episodios de guardia. Adaptación en FE necesaria para el build

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
@@ -46,7 +46,7 @@
 								</mat-card-header>
 
 								<ng-template #patientInfo>
-									<span *ngIf="(episode.patient?.typeId !== PACIENTE_TEMPORAL || episode.patient?.firstName || episode.patient?.lastName) else temporal">
+									<span *ngIf="(episode.patient?.typeId !== PACIENTE_TEMPORAL || episode.patient?.person?.firstName || episode.patient?.person?.lastName) else temporal">
 									{{ episode.patient?.person?.firstName }} {{ episode.patient?.person?.lastName }}
 									</span>
 								</ng-template>
